@@ -1,3 +1,7 @@
+2019-12-20 Magnus Hagdorn
+ * piccolo3/client/PiccoloSpectrometer.py: check if TEC is present; add
+   method to get current temperature
+
 2019-12-10 Magnus Hagdorn
  * setup.py: install new program
  * piccolo3/ptriggered.py: add program to wait for trigger signal and start
